--- a/index.html
+++ b/index.html
@@ -52,12 +52,19 @@ button:hover{background:#333;}
 .dimmed{color:#666 !important;opacity:0.45;}
 
 .sortBtns{text-align:center;margin-bottom:10px;}
-hr{border:none;border-top:1px solid #333;margin:10px 0;}
 
 .glowLabel{color:orange;font-weight:bold;}
-.glowBtn{color:gold;font-weight:bold;cursor:pointer;}
+.glowBtn{
+color:gold;
+font-weight:bold;
+cursor:pointer;
+margin-left:6px;
+}
 .glowBtn:hover{color:orange;}
 
+hr{border:none;border-top:1px solid #333;margin:10px 0;}
+
+/* ===== 팝업 ===== */
 .modal{
 display:none;
 position:fixed;
@@ -113,6 +120,7 @@ background:#333;
 <span class="ultra">[ULTRA(★★)] 올가</span>
 </div>
 
+<!-- 가챠 영역 -->
 <div class="section">
 <div style="text-align:center;">
 <button onclick="pull(1)">1회</button>
@@ -121,10 +129,11 @@ background:#333;
 <div id="result"></div>
 </div>
 
+<!-- 도감 영역 -->
 <div class="section">
 총 뽑기 횟수: <span id="totalCount">0</span> |
 <span class="glowLabel">잔광: <span id="glowCount">0</span></span>
-<span class="glowBtn" onclick="openModal()">[잔광 보정]</span>
+<button class="glowBtn" onclick="openModal()">잔광 보정</button>
 <hr>
 
 <div class="sortBtns">
@@ -141,6 +150,7 @@ background:#333;
 <button onclick="resetData()">리셋</button>
 </div>
 
+<!-- ===== 잔광 보정 팝업 ===== -->
 <div id="glowModal" class="modal">
 <div class="modalContent">
 <div class="modalHeader">
@@ -154,8 +164,10 @@ background:#333;
 <script>
 
 // ===== DB =====
-let DB = [...]; // 기존 DB 그대로 유지
+// (여기에 이전에 사용한 전체 DB 그대로 붙여넣기)
+let DB = window.DB || [];
 
+// ===== 상태 =====
 let totalCount = parseInt(localStorage.getItem("totalCount"))||0;
 let collection = JSON.parse(localStorage.getItem("collection"))||[];
 let glow = parseInt(localStorage.getItem("glow"))||0;
@@ -163,26 +175,27 @@ let sortMode="grade";
 
 updateUI();
 
+// ===== 유틸 =====
 function rollRarity(){
 let r=Math.random();
 if(r<0.03) return 3;
 if(r<0.23) return 2;
 return 1;
 }
-
 function getGradeText(r){
 if(r===3) return "[LUMEN(★★★)]";
 if(r===2) return "[ULTRA(★★)]";
 return "[INFRA(★)]";
 }
-
 function getClass(r){
 if(r===3) return "lumen";
 if(r===2) return "ultra";
 return "infra";
 }
 
+// ===== 가챠 =====
 function pull(times){
+
 let results=[];
 for(let i=0;i<times;i++){
 let rarity=rollRarity();
@@ -190,31 +203,43 @@ let pool=DB.filter(c=>c.rarity===rarity);
 let char=pool[Math.floor(Math.random()*pool.length)];
 results.push(char);
 }
+
 if(times===10){
 if(!results.some(c=>c.rarity>=2)){
 let ultraPool=DB.filter(c=>c.rarity===2);
 results[9]=ultraPool[Math.floor(Math.random()*ultraPool.length)];
 }
 }
+
 let html="";
+
 for(let char of results){
+
 totalCount++;
 glow++;
+
 let isNew=!collection.includes(char.name);
 if(isNew) collection.push(char.name);
-html+=`<div class="resultCard ${getClass(char.rarity)}">
+
+html+=`
+<div class="resultCard ${getClass(char.rarity)}">
 ${getGradeText(char.rarity)} ${char.name}
 <span class="groupText">(${char.group})</span>
 ${isNew?'<span class="newMark"> New!</span>':''}
-</div>`;
+</div>
+`;
 }
+
 document.getElementById("result").innerHTML=html;
+
 localStorage.setItem("totalCount",totalCount);
 localStorage.setItem("collection",JSON.stringify(collection));
 localStorage.setItem("glow",glow);
+
 updateUI();
 }
 
+// ===== 잔광 팝업 =====
 function openModal(){
 document.getElementById("glowModal").style.display="flex";
 renderExchange();
@@ -222,14 +247,14 @@ renderExchange();
 function closeModal(){
 document.getElementById("glowModal").style.display="none";
 }
-
 function renderExchange(){
 let html="";
 for(let c of DB){
-let cost=c.rarity===3?200:(c.rarity===2?50:null);
+let cost = c.rarity===3?200:(c.rarity===2?50:null);
 if(!cost) continue;
-let disabled=glow<cost;
-html+=`<div class="${getClass(c.rarity)}">
+let disabled = glow<cost;
+html+=`
+<div class="${getClass(c.rarity)}">
 ${getGradeText(c.rarity)} ${c.name}
 <span class="groupText">(${c.group})</span>
 <button class="exchangeBtn" onclick="exchange('${c.name}',${cost})"
@@ -240,7 +265,6 @@ ${disabled?'disabled':''}>
 }
 document.getElementById("exchangeList").innerHTML=html;
 }
-
 function exchange(name,cost){
 if(glow<cost) return;
 if(confirm(name+"을(를) 잔광 "+cost+"으로 교환하시겠습니까?")){
@@ -253,9 +277,10 @@ renderExchange();
 }
 }
 
+// ===== 정렬 =====
 function setSort(mode){sortMode=mode;updateUI();}
-
 function updateUI(){
+
 document.getElementById("totalCount").textContent=totalCount;
 document.getElementById("glowCount").textContent=glow;
 
@@ -266,12 +291,14 @@ if(sortMode==="all"){
 let sorted=[...DB].sort((a,b)=>b.rarity-a.rarity);
 for(let c of sorted){
 let ownedFlag=collection.includes(c.name);
-html+=`<div class="${getClass(c.rarity)} ${ownedFlag?'':'dimmed'}">
+html+=`
+<div class="${getClass(c.rarity)} ${ownedFlag?'':'dimmed'}">
 ${getGradeText(c.rarity)} ${c.name}
 <span class="groupText">(${c.group})</span>
 </div>`;
 }
-}else{
+}
+else{
 owned.sort((a,b)=>{
 if(sortMode==="name") return a.name.localeCompare(b.name,"ko");
 if(sortMode==="group") return a.group.localeCompare(b.group,"ko");
@@ -283,23 +310,29 @@ if(sortMode==="group" && c.group!==currentGroup){
 currentGroup=c.group;
 html+=`<hr><strong>${currentGroup}</strong><br>`;
 }
-html+=`<div class="${getClass(c.rarity)}">
+html+=`
+<div class="${getClass(c.rarity)}">
 ${getGradeText(c.rarity)} ${c.name}
 <span class="groupText">(${c.group})</span>
 </div>`;
 }
 }
+
 document.getElementById("collectionArea").innerHTML=html||"없음";
 }
 
+// ===== 리셋 =====
 function resetData(){
 if(confirm("정말로 모든 기록을 초기화하시겠습니까?")){
-totalCount=0;collection=[];glow=0;
+totalCount=0;
+collection=[];
+glow=0;
 localStorage.clear();
 document.getElementById("result").innerHTML="";
 updateUI();
 }
 }
 </script>
+
 </body>
 </html>
