--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ h2{text-align:center;margin-bottom:5px;}
 .section{border:1px solid #333;border-radius:8px;padding:15px;margin-bottom:20px;background:#151515;}
 .resultCard{background:#1c1c1c;padding:10px;border-radius:6px;margin-bottom:8px;}
 
-button{width:120px;height:38px;margin:6px;border:none;border-radius:6px;background:#222;color:white;cursor:pointer;}
+button{height:38px;margin:6px;border:none;border-radius:6px;background:#222;color:white;cursor:pointer;padding:0 14px;}
 button:hover{background:#333;}
 
 .infra{color:red;}
@@ -26,12 +26,26 @@ button:hover{background:#333;}
 .sortBtns{text-align:center;margin-bottom:10px;}
 
 .glowLabel{color:orange;font-weight:bold;}
-.glowBtn{color:gold;font-weight:bold;cursor:pointer;margin-left:6px;}
+.glowBtn{color:gold;font-weight:bold;cursor:pointer;}
 .glowBtn:hover{color:orange;}
+
+.exchangeRow{
+display:flex;
+justify-content:space-between;
+align-items:center;
+padding:6px 0;
+border-bottom:1px solid #222;
+}
+
+.exchangeBtn{
+height:28px;
+padding:0 10px;
+font-size:12px;
+background:#333;
+}
 
 hr{border:none;border-top:1px solid #333;margin:10px 0;}
 
-/* 팝업 */
 .modal{
 display:none;
 position:fixed;
@@ -61,9 +75,6 @@ cursor:pointer;
 color:#aaa;
 }
 .closeBtn:hover{color:white;}
-.exchangeBtn{
-width:auto;height:auto;padding:4px 8px;margin-left:8px;font-size:12px;background:#333;
-}
 </style>
 </head>
 
@@ -89,7 +100,7 @@ width:auto;height:auto;padding:4px 8px;margin-left:8px;font-size:12px;background
 <div class="section">
 총 뽑기 횟수: <span id="totalCount">0</span> |
 <span class="glowLabel">잔광: <span id="glowCount">0</span></span>
-<button class="glowBtn" onclick="openModal()">잔광 보정</button>
+<button class="glowBtn" onclick="openGlow()">잔광 보정</button>
 <hr>
 
 <div class="sortBtns">
@@ -103,6 +114,7 @@ width:auto;height:auto;padding:4px 8px;margin-left:8px;font-size:12px;background
 </div>
 
 <div class="section" style="text-align:center;">
+<button onclick="openLog()">가챠 기록</button>
 <button onclick="resetData()">리셋</button>
 </div>
 
@@ -111,15 +123,27 @@ width:auto;height:auto;padding:4px 8px;margin-left:8px;font-size:12px;background
 <div class="modalContent">
 <div class="modalHeader">
 잔광 보정
-<span class="closeBtn" onclick="closeModal()">✕</span>
+<span class="closeBtn" onclick="closeGlow()">✕</span>
 </div>
 <div id="exchangeList"></div>
 </div>
 </div>
 
+<!-- 기록 팝업 -->
+<div id="logModal" class="modal">
+<div class="modalContent">
+<div class="modalHeader">
+가챠 기록
+<span class="closeBtn" onclick="closeLog()">✕</span>
+</div>
+<div id="logList"></div>
+</div>
+</div>
+
 <script>
 
-// ================= DB =================
+// ===== DB =====
+
 let DB = [
 
 {name:"발렌티나",rarity:3,group:"등불사무소"},
@@ -196,20 +220,22 @@ let DB = [
 
 ];
 
-// ================= 상태 =================
+
+// ===== 상태 =====
 let totalCount=parseInt(localStorage.getItem("totalCount"))||0;
 let collection=JSON.parse(localStorage.getItem("collection"))||[];
 let glow=parseInt(localStorage.getItem("glow"))||0;
+let history=JSON.parse(localStorage.getItem("history"))||[];
 let sortMode="grade";
 
 updateUI();
 
-// ================= 유틸 =================
+// ===== 유틸 =====
 function rollRarity(){let r=Math.random();if(r<0.03)return 3;if(r<0.23)return 2;return 1;}
 function getGradeText(r){if(r===3)return "[LUMEN(★★★)]";if(r===2)return "[ULTRA(★★)]";return "[INFRA(★)]";}
 function getClass(r){if(r===3)return "lumen";if(r===2)return "ultra";return "infra";}
 
-// ================= 가챠 =================
+// ===== 가챠 =====
 function pull(times){
 let results=[];
 for(let i=0;i<times;i++){
@@ -225,6 +251,7 @@ results[9]=ultraPool[Math.floor(Math.random()*ultraPool.length)];
 let html="";
 for(let char of results){
 totalCount++;glow++;
+history.push(`${getGradeText(char.rarity)} ${char.name}`);
 let isNew=!collection.includes(char.name);
 if(isNew)collection.push(char.name);
 html+=`<div class="resultCard ${getClass(char.rarity)}">
@@ -237,32 +264,39 @@ document.getElementById("result").innerHTML=html;
 localStorage.setItem("totalCount",totalCount);
 localStorage.setItem("collection",JSON.stringify(collection));
 localStorage.setItem("glow",glow);
+localStorage.setItem("history",JSON.stringify(history));
 updateUI();
 }
 
-// ================= 잔광 교환 =================
-function openModal(){document.getElementById("glowModal").style.display="flex";renderExchange();}
-function closeModal(){document.getElementById("glowModal").style.display="none";}
+// ===== 잔광 =====
+function openGlow(){document.getElementById("glowModal").style.display="flex";renderExchange();}
+function closeGlow(){document.getElementById("glowModal").style.display="none";}
+
 function renderExchange(){
 let html="";
-for(let c of DB){
-let cost=c.rarity===3?200:(c.rarity===2?50:null);
-if(!cost)continue;
+let available=DB.filter(c=>!collection.includes(c.name) && (c.rarity===2||c.rarity===3));
+for(let c of available){
+let cost=c.rarity===3?200:50;
 let disabled=glow<cost;
-html+=`<div class="${getClass(c.rarity)}">
+html+=`
+<div class="exchangeRow ${getClass(c.rarity)}">
+<div>
 ${getGradeText(c.rarity)} ${c.name}
 <span class="groupText">(${c.group})</span>
+</div>
 <button class="exchangeBtn" onclick="exchange('${c.name}',${cost})" ${disabled?'disabled':''}>
 교환 (${cost})
-</button></div>`;
+</button>
+</div>`;
 }
-document.getElementById("exchangeList").innerHTML=html;
+document.getElementById("exchangeList").innerHTML=html||"교환 가능한 캐릭터 없음";
 }
+
 function exchange(name,cost){
 if(glow<cost)return;
 if(confirm(name+"을(를) 잔광 "+cost+"으로 교환하시겠습니까?")){
 glow-=cost;
-if(!collection.includes(name))collection.push(name);
+collection.push(name);
 localStorage.setItem("glow",glow);
 localStorage.setItem("collection",JSON.stringify(collection));
 updateUI();
@@ -270,7 +304,15 @@ renderExchange();
 }
 }
 
-// ================= 정렬 =================
+// ===== 기록 =====
+function openLog(){
+document.getElementById("logModal").style.display="flex";
+document.getElementById("logList").innerHTML=
+history.length?history.map(x=>"<div>"+x+"</div>").join(""):"기록 없음";
+}
+function closeLog(){document.getElementById("logModal").style.display="none";}
+
+// ===== 정렬 =====
 function setSort(mode){sortMode=mode;updateUI();}
 function updateUI(){
 document.getElementById("totalCount").textContent=totalCount;
@@ -307,10 +349,10 @@ ${getGradeText(c.rarity)} ${c.name}
 document.getElementById("collectionArea").innerHTML=html||"없음";
 }
 
-// ================= 리셋 =================
+// ===== 리셋 =====
 function resetData(){
 if(confirm("정말로 모든 기록을 초기화하시겠습니까?")){
-totalCount=0;collection=[];glow=0;
+totalCount=0;collection=[];glow=0;history=[];
 localStorage.clear();
 document.getElementById("result").innerHTML="";
 updateUI();
