--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ h2{text-align:center;margin-bottom:5px;}
 .subtitle{text-align:center;font-size:14px;color:#aaa;margin-bottom:20px;line-height:1.6;}
 
 .section{border:1px solid #333;border-radius:8px;padding:15px;margin-bottom:20px;background:#151515;}
-.resultCard{background:#1c1c1c;padding:10px;border-radius:6px;margin-bottom:8px;}
+.resultCard{background:#1c1c1c;padding:10px;border-radius:6px;margin-bottom:8px;transition:0.2s;}
 
 button{height:38px;margin:6px;border:none;border-radius:6px;background:#222;color:white;cursor:pointer;padding:0 14px;}
 button:hover{background:#333;}
@@ -29,71 +29,45 @@ button:hover{background:#333;}
 .glowBtn{color:gold;font-weight:bold;cursor:pointer;}
 .glowBtn:hover{color:orange;}
 
-.exchangeRow{
-display:flex;
-justify-content:space-between;
-align-items:center;
-padding:6px 0;
-border-bottom:1px solid #222;
-}
-
-.exchangeBtn{
-height:28px;
-padding:0 10px;
-font-size:12px;
-background:#333;
-}
+.exchangeRow{display:flex;justify-content:space-between;align-items:center;padding:6px 0;border-bottom:1px solid #222;}
+.exchangeBtn{height:28px;padding:0 10px;font-size:12px;background:#333;}
 
 hr{border:none;border-top:1px solid #333;margin:10px 0;}
 
-.modal{
-display:none;
-position:fixed;
-top:0;left:0;
-width:100%;height:100%;
-background:rgba(0,0,0,0.7);
-justify-content:center;
-align-items:center;
-}
-.modalContent{
-background:#1b1b1b;
-padding:20px;
-border-radius:8px;
-width:80%;
-max-height:80%;
-overflow:auto;
-border:1px solid #444;
-}
-.modalHeader{
-color:orange;
-font-weight:bold;
-margin-bottom:10px;
-}
-.closeBtn{
-float:right;
-cursor:pointer;
-color:#aaa;
-}
+.modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.7);justify-content:center;align-items:center;}
+.modalContent{background:#1b1b1b;padding:20px;border-radius:8px;width:80%;max-height:80%;overflow:auto;border:1px solid #444;}
+.modalHeader{color:orange;font-weight:bold;margin-bottom:10px;}
+.closeBtn{float:right;cursor:pointer;color:#aaa;}
 .closeBtn:hover{color:white;}
 
-.logNote{
-font-size:11px;
-color:#777;
-margin-bottom:10px;
+.logNote{font-size:11px;color:#777;margin-bottom:10px;}
+.logCard{background:#1c1c1c;border-radius:6px;padding:8px;margin-bottom:14px;}
+.logMeta{font-size:11px;color:#aaa;margin-bottom:6px;}
+
+/* ===== 신규 등급별 반짝 효과 ===== */
+
+@keyframes glowRed{
+0%{box-shadow:0 0 0px red;}
+50%{box-shadow:0 0 18px red;}
+100%{box-shadow:0 0 0px red;}
 }
 
-.logCard{
-background:#1c1c1c;
-border-radius:6px;
-padding:8px;
-margin-bottom:14px;
+@keyframes glowPurple{
+0%{box-shadow:0 0 0px violet;}
+50%{box-shadow:0 0 18px violet;}
+100%{box-shadow:0 0 0px violet;}
 }
 
-.logMeta{
-font-size:11px;
-color:#aaa;
-margin-bottom:6px;
+@keyframes glowSilver{
+0%{box-shadow:0 0 0px silver;}
+50%{box-shadow:0 0 18px silver;}
+100%{box-shadow:0 0 0px silver;}
 }
+
+.newInfraEffect{animation:glowRed 0.5s ease-in-out;}
+.newUltraEffect{animation:glowPurple 0.5s ease-in-out;}
+.newLumenEffect{animation:glowSilver 0.5s ease-in-out;}
+
 </style>
 </head>
 
@@ -137,7 +111,6 @@ margin-bottom:6px;
 <button onclick="resetData()">리셋</button>
 </div>
 
-<!-- 잔광 팝업 -->
 <div id="glowModal" class="modal">
 <div class="modalContent">
 <div class="modalHeader">
@@ -148,7 +121,6 @@ margin-bottom:6px;
 </div>
 </div>
 
-<!-- 기록 팝업 -->
 <div id="logModal" class="modal">
 <div class="modalContent">
 <div class="modalHeader">
@@ -162,9 +134,8 @@ margin-bottom:6px;
 
 <script>
 
-// ===== DB =====
-let DB = [
-{name:"발렌티나",rarity:3,group:"등불사무소"},
+/* ===== DB ===== */
+let DB=[{name:"발렌티나",rarity:3,group:"등불사무소"},
 {name:"도로시",rarity:3,group:"등불사무소"},
 {name:"백연",rarity:3,group:"등불사무소"},
 {name:"쿠로세",rarity:3,group:"등불사무소"},
@@ -174,7 +145,6 @@ let DB = [
 {name:"오웬",rarity:2,group:"등불사무소"},
 {name:"할",rarity:1,group:"등불사무소"},
 {name:"재클린",rarity:1,group:"등불사무소"},
-
 {name:"마리",rarity:3,group:"아스트론 학파 연구지구"},
 {name:"가온",rarity:3,group:"아스트론 학파 연구지구"},
 {name:"아이린",rarity:3,group:"아스트론 학파 연구지구"},
@@ -183,26 +153,21 @@ let DB = [
 {name:"로렌츠",rarity:2,group:"아스트론 학파 연구지구"},
 {name:"프리츠",rarity:1,group:"아스트론 학파 연구지구"},
 {name:"베르너",rarity:1,group:"아스트론 학파 연구지구"},
-
 {name:"셀렌느",rarity:3,group:"하르덴브라흐"},
 {name:"마커스",rarity:3,group:"하르덴브라흐"},
 {name:"암젤",rarity:2,group:"하르덴브라흐"},
 {name:"에밀리",rarity:1,group:"하르덴브라흐"},
-
 {name:"안드레이",rarity:3,group:"66구역"},
 {name:"드미트리",rarity:3,group:"66구역"},
 {name:"공주",rarity:3,group:"66구역"},
 {name:"안나",rarity:2,group:"66구역"},
-
 {name:"모리어티",rarity:3,group:"터미널15"},
 {name:"미셸",rarity:3,group:"터미널15"},
 {name:"카산드라",rarity:3,group:"터미널15"},
 {name:"제럴드",rarity:1,group:"터미널15"},
-
 {name:"루핀",rarity:3,group:"볼칸 중공업"},
 {name:"요루",rarity:3,group:"볼칸 중공업"},
 {name:"헤더스",rarity:1,group:"볼칸 중공업"},
-
 {name:"올리버",rarity:3,group:"찰스 브리게이드"},
 {name:"오지에",rarity:3,group:"찰스 브리게이드"},
 {name:"람다",rarity:3,group:"찰스 브리게이드"},
@@ -210,16 +175,13 @@ let DB = [
 {name:"모지",rarity:3,group:"찰스 브리게이드"},
 {name:"란",rarity:3,group:"찰스 브리게이드"},
 {name:"나모",rarity:2,group:"찰스 브리게이드"},
-
 {name:"엘리아OS",rarity:3,group:"힌튼 아카이브"},
-
 {name:"렌카",rarity:3,group:"미나모토"},
 {name:"아토스",rarity:3,group:"미나모토"},
 {name:"간류",rarity:3,group:"미나모토"},
 {name:"레아",rarity:3,group:"미나모토"},
 {name:"로건",rarity:2,group:"미나모토"},
 {name:"츠카하라",rarity:1,group:"미나모토"},
-
 {name:"랜슬롯",rarity:3,group:"아발론PMC"},
 {name:"케이",rarity:3,group:"아발론PMC"},
 {name:"트리스탄",rarity:3,group:"아발론PMC"},
@@ -227,17 +189,14 @@ let DB = [
 {name:"노미",rarity:3,group:"아발론PMC"},
 {name:"가레스",rarity:2,group:"아발론PMC"},
 {name:"이졸드",rarity:2,group:"아발론PMC"},
-
 {name:"미래",rarity:3,group:"서천그룹"},
 {name:"리",rarity:3,group:"서천그룹"},
 {name:"이안",rarity:2,group:"서천그룹"},
 {name:"리나",rarity:1,group:"서천그룹"},
-
 {name:"스테파네트",rarity:3,group:"솔레어"},
-{name:"뮌하우젠",rarity:2,group:"솔레어"}
-];
+{name:"뮌하우젠",rarity:2,group:"솔레어"}];
 
-// ===== 상태 =====
+/* ===== 상태 ===== */
 let totalCount=parseInt(localStorage.getItem("totalCount"))||0;
 let collection=JSON.parse(localStorage.getItem("collection"))||[];
 let glow=parseInt(localStorage.getItem("glow"))||0;
@@ -246,11 +205,14 @@ let sortMode="grade";
 
 updateUI();
 
+/* ===== 유틸 ===== */
+function sleep(ms){return new Promise(r=>setTimeout(r,ms));}
 function rollRarity(){let r=Math.random();if(r<0.03)return 3;if(r<0.23)return 2;return 1;}
 function getGradeText(r){if(r===3)return "[LUMEN(★★★)]";if(r===2)return "[ULTRA(★★)]";return "[INFRA(★)]";}
 function getClass(r){if(r===3)return "lumen";if(r===2)return "ultra";return "infra";}
 
-function pull(times){
+/* ===== 가챠 ===== */
+async function pull(times){
 let results=[];
 for(let i=0;i<times;i++){
 let rarity=rollRarity();
@@ -262,20 +224,38 @@ let ultraPool=DB.filter(c=>c.rarity===2);
 results[9]=ultraPool[Math.floor(Math.random()*ultraPool.length)];
 }
 
-let html="";
+let resultArea=document.getElementById("result");
+resultArea.innerHTML="";
+
 for(let char of results){
-totalCount++;glow++;
+
+totalCount++;
+glow++;
+
 let isNew=!collection.includes(char.name);
 if(isNew)collection.push(char.name);
 
-html+=`<div class="resultCard ${getClass(char.rarity)}">
-${getGradeText(char.rarity)} ${char.name}
-<span class="groupText">(${char.group})</span>
-${isNew?'<span class="newMark"> New!</span>':''}
-</div>`;
+let card=document.createElement("div");
+card.className="resultCard "+getClass(char.rarity);
+card.innerHTML=`${getGradeText(char.rarity)} ${char.name} <span class="groupText">(${char.group})</span> ${isNew?'<span class="newMark"> New!</span>':''}`;
+resultArea.appendChild(card);
+
+await sleep(80);
+
+if(isNew){
+
+await sleep(250);
+
+if(char.rarity===1) card.classList.add("newInfraEffect");
+else if(char.rarity===2) card.classList.add("newUltraEffect");
+else card.classList.add("newLumenEffect");
+
+await sleep(500);
+
+card.classList.remove("newInfraEffect","newUltraEffect","newLumenEffect");
+}
 }
 
-document.getElementById("result").innerHTML=html;
 saveHistory(times,results);
 localStorage.setItem("totalCount",totalCount);
 localStorage.setItem("collection",JSON.stringify(collection));
@@ -283,11 +263,12 @@ localStorage.setItem("glow",glow);
 updateUI();
 }
 
+/* ===== 이하 기존 기능 그대로 ===== */
+
 function saveHistory(times,results){
 let now=new Date();
 let dateStr=now.getFullYear()+"-"+String(now.getMonth()+1).padStart(2,'0')+"-"+String(now.getDate()).padStart(2,'0')+" "+String(now.getHours()).padStart(2,'0')+":"+String(now.getMinutes()).padStart(2,'0');
-let record={date:dateStr,count:times,results:results};
-history.unshift(record);
+history.unshift({date:dateStr,count:times,results:results});
 if(history.length>200)history=history.slice(0,200);
 localStorage.setItem("history",JSON.stringify(history));
 }
@@ -341,6 +322,7 @@ document.getElementById("glowCount").textContent=glow;
 
 let owned=DB.filter(c=>collection.includes(c.name));
 let html="";
+
 if(sortMode==="all"){
 let sorted=[...DB].sort((a,b)=>b.rarity-a.rarity);
 for(let c of sorted){
@@ -348,10 +330,17 @@ let ownedFlag=collection.includes(c.name);
 html+=`<div class="${getClass(c.rarity)} ${ownedFlag?'':'dimmed'}">${getGradeText(c.rarity)} ${c.name} <span class="groupText">(${c.group})</span></div>`;
 }
 }else{
-owned.sort((a,b)=>{if(sortMode==="name")return a.name.localeCompare(b.name,"ko");if(sortMode==="group")return a.group.localeCompare(b.group,"ko");return b.rarity-a.rarity;});
+owned.sort((a,b)=>{
+if(sortMode==="name")return a.name.localeCompare(b.name,"ko");
+if(sortMode==="group")return a.group.localeCompare(b.group,"ko");
+return b.rarity-a.rarity;
+});
 let currentGroup="";
 for(let c of owned){
-if(sortMode==="group"&&c.group!==currentGroup){currentGroup=c.group;html+=`<hr><strong>${currentGroup}</strong><br>`;}
+if(sortMode==="group"&&c.group!==currentGroup){
+currentGroup=c.group;
+html+=`<hr><strong>${currentGroup}</strong><br>`;
+}
 html+=`<div class="${getClass(c.rarity)}">${getGradeText(c.rarity)} ${c.name} <span class="groupText">(${c.group})</span></div>`;
 }
 }
